# fastapi-practice

./: README.md  pyproject.toml
fastapi_practice/: database.py  get_wikipedia.py  helpers.py  main.py  models.py  nlp.py  wiki_page_stats.db
fastapi_practice/core/: database.py
