[tool.poetry]
name = "fastapi_practice"
version = "0.1.0"
description = ""
authors = ["skylar-kerzner-community <skerzner@community.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.57.0"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.17"
requests = "^2.31.0"
Wikipedia = "^1.4.0"
spacy = "^2.2.4"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
